# line

./: CHANGELOG.md  Cargo.toml  README.md  README.zh.md  cliff.toml
.github/workflows/: release.yml
npm/main/: README.md  package.json
npm/main/scripts/: postinstall.js
npm/scripts/: prepare-packages.js
src/: cli.rs  main.rs  updater.rs
src/config/: loader.rs  models.rs  types.rs
src/core/: statusline.rs
src/core/segments/: codex_usage.rs  context_window.rs  mod.rs  session.rs  usage.rs
src/ui/: app.rs  main_menu.rs
src/ui/components/: preview.rs  segment_list.rs  settings.rs
src/ui/themes/: presets.rs
